@@ -1,7 +1,7 @@
 ############################################################################
 # lib/Makefile
 #
-#   Copyright (C) 2007, 2008 Gregory Nutt. All rights reserved.
+#   Copyright (C) 2007-2009 Gregory Nutt. All rights reserved.
 #   Author: Gregory Nutt <spudmonkey@racsa.co.cr>
 #
 # Redistribution and use in source and binary forms, with or without
@@ -43,12 +43,13 @@ ifneq ($(CONFIG_NFILE_STREAMS),0)
 MISC_SRCS	+= lib_streamsem.c
 endif
 
-STRING_SRCS	= lib_memset.c lib_memcpy.c lib_memcmp.c lib_memmove.c \
-		  lib_strcpy.c lib_strncpy.c lib_strcmp.c lib_strncmp.c \
-		  lib_strcasecmp.c lib_strncasecmp.c lib_strlen.c lib_strdup.c \
-		  lib_strcat.c lib_strncat.c lib_strtol.c lib_strchr.c \
-		  lib_strrchr.c lib_strspn.c lib_strcspn.c lib_strtok.c \
-		  lib_strtokr.c lib_strerror.c
+STRING_SRCS	= lib_checkbase.c lib_isbasedigit.c lib_memset.c lib_memcpy.c \
+		  lib_memcmp.c lib_memmove.c lib_skipspace.c lib_strcasecmp.c  \
+		  lib_strcat.c lib_strchr.c lib_strcpy.c lib_strcmp.c lib_strcspn.c \
+		  lib_strdup.c lib_strerror.c lib_strlen.c lib_strncasecmp.c \
+		  lib_strncat.c lib_strncmp.c lib_strncpy.c lib_strrchr.c  \
+		  lib_strspn.c lib_strtok.c lib_strtokr.c lib_strtol.c lib_strtoll.c \
+		  lib_strtoul.c lib_strtoull.c
 
 CTYPE_SRCS	= 
 
